append new listings to top section. set timezone to defaule EST. fix malformed method missing colon

--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -37,3 +37,8 @@ $listing: 20px;
   @extend .listing;
   font-size: 16px;
 }
+
+// set if listing created_at within last hour
+#hot {
+  color: green !important;
+}
