style changes. change default scopes. descening order most recent listings on top. remove alert on hide listings.

--- a/app/assets/stylesheets/keywords.scss
+++ b/app/assets/stylesheets/keywords.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Keywords controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.keywords {
+  table, th, td {
+    border: 1px solid black;
+    border-spacing: 4px;
+    padding: 8px;
+    th {
+      border-style: none;
+    }
+  }
+
+  body, p, strong, td {
+    font-size: 20px;
+    margin: 20px;
+  }
+
+}
