--- a/app/views/listings/_listings.html.erb
+++ b/app/views/listings/_listings.html.erb
@@ -5,7 +5,7 @@
 
     <span class="id inline span4"><%= link_to listing.id, listing %></span>
     <span class="mark-hide inline" id="<%= 'listing_' + listing.id.to_s %>">
-      <%= link_to 'Hide [x]', "/hide_listing/#{listing.id}", data: {confirm: "Are you sure?"}, action: :hide_listing, method: :post, remote: true, class: 'hide_listing' %>
+      <%= link_to 'Hide [x]', "/hide_listing/#{listing.id}", action: :hide_listing, method: :post, remote: true, class: 'hide_listing' %>
     </span>
 
     <span class="listing junior inline">
