--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,5 +21,5 @@ body {
   font-size: 18px;
   font-family: sans-serif;
   color: rgb(35, 37, 64);
-  background-color: #527494;
+  background-color: BurlyWood;
 }
