--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= keyword.word %></td>
         <td><%= link_to 'Show', keyword %></td>
         <td><%= link_to 'Edit', edit_keyword_path(keyword) %></td>
-        <td><%= link_to 'Destroy', keyword, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', keyword, method: :delete } #, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
