add search function to listings. add filter listings. associate any keyword to listings. toggle hide listings on toggle hide keywords

--- a/app/views/keywords/_form.html.erb
+++ b/app/views/keywords/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :word %><br>
     <%= f.text_field :word %>
   </div>
+  <div class="field">
+    <%= f.label :hide %>
+    <%= f.check_box :hide %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
