--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the listings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$listing: 20px;
+$listing: 16px;
 
 .id {
   display: inline-block;
@@ -31,7 +31,11 @@ $listing: 20px;
    }
 }
 
-.space{
+.top-space-10{
+  margin-top: 10px;
+}
+
+.top-space-20{
   margin-top: 20px;
 }
 
