--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,18 @@
 <body class="<%= params["controller"] %>" id="<%= params["action"] %>">
   <nav class="navbar navbar-default">
     <ul class="nav navbar-nav">
-      <li><%= link_to 'Listings', listings_path %></li>
+      <li>
+        <span class="listings">
+          <button class="btn btn-default dropdown-toggle top-space-10" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            Listings
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <li><%= link_to 'Listings', listings_path %></li>
+            <li><%= link_to 'Filter Listings', search_path %></li>
+          </ul>
+        </span>
+      </li>
       <li><%= link_to 'Keywords', keywords_path %></li>
     </ul>
   </nav>
