add listing_filter model. add interactor gem. begin implementing interators. add suggested keywords to seeds. style improvements

--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -13,7 +13,10 @@ $listing: 16px;
 }
 
 #undo-hide {
+  margin-top: 35vh;
+  margin-left: 1vw;
   position: fixed;
+  font-size: 1.2em;
 }
 
 .listing {
