--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,5 +1,4 @@
-<%= button_to 'update listings', get_new_path, method: :get %>
-<%= render 'undo_button' %>
+<%= render 'undo_hide' %>
 <div class="hide" id="whats-hot">
     <h2>New Hot Listings! </h2>
 </div>
