--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,5 +31,7 @@ li {
 .notice {
   border: solid white 2px;
   border-radius: 2%;
-  padding-top: 4px;
+  padding-top: 12px;
+  font-weight: bold;
+  min-width: 40vw;
 }
