--- a/app/views/listings/get_new.html.erb
+++ b/app/views/listings/get_new.html.erb
@@ -1,3 +1,3 @@
 <%= button_to 'Listings', listings_path, method: :get %>
 <%= render 'get_new'%>
-<%= render 'undo_button' %>
+<%= render 'undo_hide' %>
