--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
     </ul>
   </nav>
 
-  <div class="container">
+  <div class="container" id="flash-notice-container">
     <% if flash[:notice] %>
     <div class="row">
       <div class="col-md-8 col-md-offset-4 col-xs-12">
@@ -38,6 +38,8 @@
       </div>
     </div>
     <% end %>
+  </div>
+  <div class="container" id="main-body-container">
     <%= yield %>
   </div>
 </body>
