put box around clicked listing link

--- a/app/assets/stylesheets/listings.scss
+++ b/app/assets/stylesheets/listings.scss
@@ -34,6 +34,13 @@ $listing: 16px;
    }
 }
 
+.boxed-row {
+  border-style: solid;
+  border-color: #000;
+  border-width: 2px;
+}
+
+
 .top-space-10{
   margin-top: 10px;
 }
