--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@ body {
   font-size: 18px;
   font-family: sans-serif;
   color: rgb(35, 37, 64);
-  background-color: BurlyWood;
+  background-color: rgb(150, 179, 171);
 }
 
 li {
