--- a/app/views/keywords/index.html.erb
+++ b/app/views/keywords/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Keywords</h1>
-
+<%= link_to 'New Keyword', new_keyword_path %>
 <table>
   <thead>
     <tr>
@@ -23,5 +23,4 @@
 </table>
 
 <br>
-
 <%= link_to 'New Keyword', new_keyword_path %>
