--- a/app/views/listing_mailer/junior_email.html.erb
+++ b/app/views/listing_mailer/junior_email.html.erb
@@ -4,7 +4,7 @@
      <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <% @junior_listings.each do |listing| %>
+    <% @listings.each do |listing| %>
     <table>
       <tr>
         <td>
