remove do filter link. add purge all for now

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,6 @@
     <li><%= link_to 'Get New Listings', get_new_path, method: :get %></li>
     <li><%= link_to 'Keywords', keywords_path %></li>
     <!-- <li><%= link_to 'Filters', '#' %></li> -->
-    <li><%= link_to 'Do Filters', do_filters_path %></li>
+    <!-- <li><%= link_to 'Do Filters', do_filters_path %></li> -->
   </ul>
 </nav>
