--- a/app/views/listings/search.html.erb
+++ b/app/views/listings/search.html.erb
@@ -5,5 +5,5 @@
     <%= submit_tag "Search", :name => nil %>
   </p>
 <% end %>
-
+<%= render partial: 'listings/undo_hide' %>
 <%= render partial: "listings", :locals => { :listings => @listings} %>
